maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ((Int, Int))
  ecritMessage(sortie)
  ^JediEscaper:13: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                      ^JediEscaper:13: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                                 ^